[gd_scene load_steps=21 format=3 uid="uid://cfv81cv7x8q8m"]

[ext_resource type="Script" path="res://enemies/mole.gd" id="1_2qd3n"]
[ext_resource type="Texture2D" uid="uid://do7lbpjp1ea10" path="res://art/spritesheets/enemies/enemy_death.png" id="2_dotl5"]
[ext_resource type="Texture2D" uid="uid://drcfrjcg1jwr0" path="res://art/spritesheets/enemies/mole_run.png" id="3_1rlw3"]
[ext_resource type="PackedScene" uid="uid://dsc4vj8608r1r" path="res://death_sound.tscn" id="4_limll"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ok01y"]
size = Vector2(16, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1r0o"]
atlas = ExtResource("2_dotl5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqksg"]
atlas = ExtResource("2_dotl5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_75ufc"]
atlas = ExtResource("2_dotl5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_34mvc"]
atlas = ExtResource("2_dotl5")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwwdj"]
atlas = ExtResource("2_dotl5")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ii4vc"]
atlas = ExtResource("2_dotl5")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuaye"]
atlas = ExtResource("2_dotl5")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gb081"]
atlas = ExtResource("2_dotl5")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4rvh"]
atlas = ExtResource("3_1rlw3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqimm"]
atlas = ExtResource("3_1rlw3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtyot"]
atlas = ExtResource("3_1rlw3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4i7o7"]
atlas = ExtResource("3_1rlw3")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ink5a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1r0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqksg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75ufc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34mvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwwdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ii4vc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuaye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gb081")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4rvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqimm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtyot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i7o7")
}],
"loop": true,
"name": &"Run",
"speed": 16.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g606w"]
size = Vector2(21, 8.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3gw23"]
size = Vector2(23, 9.5)

[node name="Rat" type="CharacterBody2D"]
script = ExtResource("1_2qd3n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -6)
shape = SubResource("RectangleShape2D_ok01y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_ink5a")
animation = &"Run"

[node name="Death" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death"]
position = Vector2(1.5, -9.75)
shape = SubResource("RectangleShape2D_g606w")

[node name="PlayerCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
position = Vector2(1.5, -5.25)
shape = SubResource("RectangleShape2D_3gw23")

[node name="DeathSound" parent="." instance=ExtResource("4_limll")]

[connection signal="body_entered" from="Death" to="." method="_on_death_body_entered"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_player_collision_body_entered"]
